--- a/SampleMyApp2/checkListCell.xib
+++ b/SampleMyApp2/checkListCell.xib
@@ -13,10 +13,6 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="check-09.png" translatesAutoresizingMaskIntoConstraints="NO" id="Oua-h3-Sz4">
-                        <rect key="frame" x="5" y="9.5" width="26" height="26"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                    </imageView>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AyA-5v-h7n">
                         <rect key="frame" x="35" y="5" width="285" height="36"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -24,10 +20,20 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B6f-Ql-9xQ">
+                        <rect key="frame" x="5" y="9" width="26" height="26"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <state key="normal" image="check-09.png">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <connections>
+                            <action selector="checkBtnTap:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="PpB-0z-Bu7"/>
+                        </connections>
+                    </button>
                 </subviews>
             </tableViewCellContentView>
             <connections>
-                <outlet property="checkImg" destination="Oua-h3-Sz4" id="GWv-sv-ni0"/>
+                <outlet property="checkBtn" destination="B6f-Ql-9xQ" id="nWt-8e-Y8O"/>
                 <outlet property="todoTextLabel" destination="AyA-5v-h7n" id="wND-Bk-MPO"/>
             </connections>
         </tableViewCell>
