--- a/SampleMyApp2/checkCell.xib
+++ b/SampleMyApp2/checkCell.xib
@@ -13,15 +13,24 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ilJ-KT-VZd">
-                        <rect key="frame" x="10" y="7" width="46" height="30"/>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ilJ-KT-VZd">
+                        <rect key="frame" x="5" y="9" width="26" height="26"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <state key="normal" title="Button">
+                        <state key="normal" title="Button" image="check-09.png">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
+                        <connections>
+                            <action selector="checkBtnTap:event:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="zM4-4e-mcG"/>
+                        </connections>
                     </button>
                 </subviews>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="checkBtn" destination="ilJ-KT-VZd" id="cbq-3g-V4x"/>
+            </connections>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="check-09.png" width="41" height="41"/>
+    </resources>
 </document>
